--- a/src/styles/actual.scss
+++ b/src/styles/actual.scss
@@ -1,6 +1,5 @@
 .actual {
-  margin: 0 auto;
-  display: flex;
+  margin: 20px auto;
 }
 
 .actual__container {
@@ -38,6 +37,8 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+
+  width: 90%;
   @include Mobile {
     margin: 30px auto;
   }
@@ -122,21 +123,21 @@
   }
 
   @include Notebook {
-    transform: translate(0, -250px);
+    transform: translate(0, -290px);
   }
 
   @include t1440 {
-    transform: translate(0, -250px);
+    transform: translate(0, -290px);
   }
 
   @include TheDesign {
-    transform: translate(0, -250px);
+    transform: translate(0, -290px);
   }
   @include FullHD {
-    transform: translate(0, -250px);
+    transform: translate(0, -290px);
   }
   @include LargeScreens {
-    transform: translate(0, -250px);
+    transform: translate(0, -290px);
   }
 }
 
@@ -164,14 +165,12 @@
 
 .actual__image {
   margin-top: 40px;
-  width: 600px;
-
+  width: 100%;
+  display: block;
   @include Mobile {
-    width: 280px;
     margin-top: 40px;
   }
   @include SmallPhone {
-    width: 600px;
     margin-top: 40px;
   }
   @include Tablet {
@@ -239,6 +238,55 @@
     margin: 0;
     height: 210px;
   }
+  @include SmallPhone {
+    width: 640px;
+    position: relative;
+    left: -30px;
+    padding: 0;
+    margin-top: 20px;
+  }
+  @include Tablet {
+    width: 1024px;
+    position: relative;
+    left: -51px;
+    padding: 0;
+    margin-top: 20px;
+  }
+  @include Notebook {
+    width: 1280px;
+    position: relative;
+    left: -65px;
+    padding: 0;
+    margin-top: 20px;
+  }
+  @include t1440 {
+    width: 1440px;
+    position: relative;
+    left: -72px;
+    padding: 0;
+    margin-top: 20px;
+  }
+  @include TheDesign {
+    width: 100vw;
+    position: relative;
+    left: -80px;
+    padding: 0;
+    margin-top: 20px;
+  }
+  @include FullHD {
+    width: 100vw;
+    position: relative;
+    left: -95px;
+    padding: 0;
+    margin-top: 20px;
+  }
+  @include LargeScreens {
+    width: 100vw;
+    position: relative;
+    left: -127px;
+    padding: 0;
+    margin-top: 20px;
+  }
 }
 
 .actual__event {
@@ -273,7 +321,7 @@
 }
 
 .actual__event-card {
-  margin: 25px 20px 0;
+  margin: 25px 20px 15px;
 }
 
 .actual__event-position {
