--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -518,6 +518,7 @@
   font-weight: bold;
   font-size: 30px;
   line-height: 100%;
+  width: 60px;
 
   /* or 30px */
 
@@ -530,14 +531,23 @@
     text-shadow: 1px 1px 2px black, 0 0 1em black;
     color: #1a5a4c;
   }
+  @include SmallPhone {
+    margin-left: 50px;
+  }
   @include Tablet {
-    margin-left: 550px;
+    margin-left: 200px;
   }
   @include Notebook {
-    margin-left: 191px;
+    margin-left: 350px;
+  }
+  @include t1440 {
+    margin-left: 350px;
   }
   @include TheDesign {
     margin-left: 400px;
+  }
+  @include FullHD {
+    margin-left: 350px;
   }
   @include LargeScreens {
     margin-left: 691px;
