--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -592,6 +592,7 @@ h1 {
   font-weight: bold;
   font-size: 30px;
   line-height: 100%;
+  width: 60px;
   /* or 30px */
   color: #0f0e08;
   text-decoration: none;
@@ -603,19 +604,34 @@ h1 {
   text-shadow: 1px 1px 2px black, 0 0 1em black;
   color: #1a5a4c;
 }
+@media (min-width: 640px) and (max-width: 1023px) {
+  .header__title {
+    margin-left: 50px;
+  }
+}
 @media (min-width: 1024px) and (max-width: 1279px) {
   .header__title {
-    margin-left: 550px;
+    margin-left: 200px;
   }
 }
 @media (min-width: 1280px) and (max-width: 1439px) {
   .header__title {
-    margin-left: 191px;
+    margin-left: 350px;
+  }
+}
+@media (min-width: 1440px) and (max-width: 1599px) {
+  .header__title {
+    margin-left: 350px;
   }
 }
 @media (min-width: 1600px) and (max-width: 1919px) {
   .header__title {
     margin-left: 400px;
+  }
+}
+@media (min-width: 1920px) and (max-width: 2559px) {
+  .header__title {
+    margin-left: 350px;
   }
 }
 @media (min-width: 2560px) {
@@ -637,8 +653,7 @@ h1 {
 }
 
 .actual {
-  margin: 0 auto;
-  display: flex;
+  margin: 20px auto;
 }
 
 .actual__container {
@@ -692,6 +707,7 @@ h1 {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  width: 90%;
 }
 @media (min-width: 320px) and (max-width: 639px) {
   .actual__card {
@@ -810,27 +826,27 @@ h1 {
 }
 @media (min-width: 1280px) and (max-width: 1439px) {
   .actual__card-position {
-    transform: translate(0, -250px);
+    transform: translate(0, -290px);
   }
 }
 @media (min-width: 1440px) and (max-width: 1599px) {
   .actual__card-position {
-    transform: translate(0, -250px);
+    transform: translate(0, -290px);
   }
 }
 @media (min-width: 1600px) and (max-width: 1919px) {
   .actual__card-position {
-    transform: translate(0, -250px);
+    transform: translate(0, -290px);
   }
 }
 @media (min-width: 1920px) and (max-width: 2559px) {
   .actual__card-position {
-    transform: translate(0, -250px);
+    transform: translate(0, -290px);
   }
 }
 @media (min-width: 2560px) {
   .actual__card-position {
-    transform: translate(0, -250px);
+    transform: translate(0, -290px);
   }
 }
 
@@ -856,17 +872,16 @@ h1 {
 
 .actual__image {
   margin-top: 40px;
-  width: 600px;
+  width: 100%;
+  display: block;
 }
 @media (min-width: 320px) and (max-width: 639px) {
   .actual__image {
-    width: 280px;
     margin-top: 40px;
   }
 }
 @media (min-width: 640px) and (max-width: 1023px) {
   .actual__image {
-    width: 600px;
     margin-top: 40px;
   }
 }
@@ -965,6 +980,69 @@ h1 {
     height: 210px;
   }
 }
+@media (min-width: 640px) and (max-width: 1023px) {
+  .actual__image-position {
+    width: 640px;
+    position: relative;
+    left: -30px;
+    padding: 0;
+    margin-top: 20px;
+  }
+}
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .actual__image-position {
+    width: 1024px;
+    position: relative;
+    left: -51px;
+    padding: 0;
+    margin-top: 20px;
+  }
+}
+@media (min-width: 1280px) and (max-width: 1439px) {
+  .actual__image-position {
+    width: 1280px;
+    position: relative;
+    left: -65px;
+    padding: 0;
+    margin-top: 20px;
+  }
+}
+@media (min-width: 1440px) and (max-width: 1599px) {
+  .actual__image-position {
+    width: 1440px;
+    position: relative;
+    left: -72px;
+    padding: 0;
+    margin-top: 20px;
+  }
+}
+@media (min-width: 1600px) and (max-width: 1919px) {
+  .actual__image-position {
+    width: 100vw;
+    position: relative;
+    left: -80px;
+    padding: 0;
+    margin-top: 20px;
+  }
+}
+@media (min-width: 1920px) and (max-width: 2559px) {
+  .actual__image-position {
+    width: 100vw;
+    position: relative;
+    left: -95px;
+    padding: 0;
+    margin-top: 20px;
+  }
+}
+@media (min-width: 2560px) {
+  .actual__image-position {
+    width: 100vw;
+    position: relative;
+    left: -127px;
+    padding: 0;
+    margin-top: 20px;
+  }
+}
 
 .actual__event {
   display: flex;
@@ -1014,7 +1092,7 @@ h1 {
 }
 
 .actual__event-card {
-  margin: 25px 20px 0;
+  margin: 25px 20px 15px;
 }
 
 .actual__event-position {
@@ -1617,11 +1695,7 @@ h1 {
   color: #687480;
   width: 100%;
   height: 100%;
-}
-@media (min-width: 320px) and (max-width: 639px) {
-  .placeholder__text {
-    padding-left: 31px;
-  }
+  padding-left: 31px;
 }
 
 .footer__container {
@@ -1675,6 +1749,7 @@ h1 {
   font-weight: bold;
   font-size: 36px;
   line-height: 100%;
+  height: 70px;
   /* or 36px */
   color: #0f0e08;
   transition: all 0.5s ease-in-out;
@@ -1810,6 +1885,7 @@ h1 {
   height: 24px;
   transition: all 0.5s ease-in-out;
   margin-right: 26px;
+  cursor: pointer;
 }
 
 .footer__facebook:hover {
@@ -1838,6 +1914,7 @@ h1 {
   width: 24px;
   height: 24px;
   transition: all 0.5s ease-in-out;
+  cursor: pointer;
 }
 
 .footer__instagram:hover {
@@ -2447,6 +2524,8 @@ h1 {
 }
 
 .page {
+  min-width: 320px;
+  max-width: 100%;
   margin: 0 auto;
 }
 @media (min-width: 320px) and (max-width: 639px) {
@@ -2499,6 +2578,8 @@ h1 {
 }
 
 body {
+  width: 100vw;
+  max-width: 100vw;
   margin: 0 auto;
   background: #eee;
 }
