--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,8 @@
 @import "footer.scss";
 
 .page {
+  min-width: 320px;
+  max-width: 100%;
   margin: 0 auto;
   @include Mobile {
     width: 320px;
@@ -45,6 +47,8 @@
 }
 
 body {
+  width: 100vw;
+  max-width: 100vw;
   margin: 0 auto;
   background: $c-gray;
   @include Mobile {
