--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -114,7 +114,15 @@
       background-color: $colorRed;
 
       @include onSmallTablet {
-        transform: translate(100%, 50%);
+        top: 50%;
+        transform: translate(100%, 70%);
+        width: 15px;
+        height: 15px;
+      }
+
+      @include onDesktop {
+        top: 50%;
+        transform: translate(100%, -50%);
         width: 15px;
         height: 15px;
       }
