--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -56,6 +56,12 @@
     height: 24px;
     width: 14px;
     margin-right: 20px;
+
+    &:hover {
+      margin-right: 18px;
+      width: 16px;
+      height: 26px;
+    }
   }
 
   &__media-inst {
@@ -64,6 +70,12 @@
     background-repeat: no-repeat;
     height: 24px;
     width: 24px;
+
+    &:hover {
+      width: 26px;
+      height: 26px;
+      margin-left: -2px;
+    }
   }
 
   &__contact-info {
