--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -86,20 +86,21 @@
       align-items: start;
       top: 50%;
       transform: translateY(-50%);
-      left: -147px;
+      left: -167px;
     }
 
     @include onBigTablet {
-      left: -202px;
+      left: -230px;
     }
 
     @include onDesktop {
-      left: -265px;
+      left: -302px;
     }
   }
 
   &__title-text {
-    font-weight: bold;
+    font-family: $monserratFont;
+    font-weight: 700;
     font-size: 45px;
     line-height: 100%;
     text-align: center;
