--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -4,11 +4,11 @@
   width: 100vw;
   height: 100vh;
   background-color: $c-white;
-  z-index: 5;
+  z-index: 6;
   transition: all 0.9s;
 
   @include onDesktop {
-    height: 22vh;
+    height: 145px;
     transform: translate(0, -100%);
   }
 
