--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -31,6 +31,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: $ibmFont;
   color: inherit;
   padding: 0 80px;
   transition: all 0.3s;
