--- a/src/styles/actual.scss
+++ b/src/styles/actual.scss
@@ -77,7 +77,7 @@
 
 .actual__info_container {
   @include Mobile {
-    width: 280px;
+    width: 90%;
   }
   @include SmallPhone {
     width: 600px;
@@ -230,8 +230,8 @@
 }
 
 .actual__image-position {
+  width: 100%;
   @include Mobile {
-    width: 320px;
     position: relative;
     left: 0;
     padding: 0;
@@ -239,51 +239,41 @@
     height: 210px;
   }
   @include SmallPhone {
-    width: 640px;
     position: relative;
-    left: -30px;
     padding: 0;
     margin-top: 20px;
   }
   @include Tablet {
-    width: 1024px;
     position: relative;
-    left: -51px;
     padding: 0;
     margin-top: 20px;
+    width: 100vw;
   }
   @include Notebook {
-    width: 1280px;
     position: relative;
-    left: -65px;
     padding: 0;
     margin-top: 20px;
   }
   @include t1440 {
-    width: 1440px;
     position: relative;
-    left: -72px;
     padding: 0;
     margin-top: 20px;
   }
   @include TheDesign {
     width: 100vw;
     position: relative;
-    left: -80px;
     padding: 0;
     margin-top: 20px;
   }
   @include FullHD {
     width: 100vw;
     position: relative;
-    left: -95px;
     padding: 0;
     margin-top: 20px;
   }
   @include LargeScreens {
     width: 100vw;
     position: relative;
-    left: -127px;
     padding: 0;
     margin-top: 20px;
   }
