--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -4,7 +4,7 @@
   margin: 0 auto;
   box-sizing: border-box;
   @include Mobile {
-    width: 320px;
+    margin: 0 auto;
   }
   @include SmallPhone {
     padding: 0 20px;
@@ -221,9 +221,10 @@
 .header__container {
   position: relative;
   top: 0;
+  margin: 0 auto;
   @include Mobile {
-    width: 320px;
     height: 300px;
+    width: 100%;
   }
 }
 
@@ -251,9 +252,8 @@
   overflow: hidden;
   margin-bottom: 20px;
   @include Mobile {
-    width: 320px;
     height: 300px;
-    object-fit: fill;
+    object-fit: cover;
     background-repeat: no-repeat;
     margin: 0;
     padding: 0;
@@ -261,6 +261,7 @@
     z-index: 0;
     order: 2;
     top: 0;
+    width: 100%;
   }
   @include SmallPhone {
     width: 450px;
