--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -18,7 +18,7 @@ h1 {
 }
 @media (min-width: 320px) and (max-width: 639px) {
   .museum__container {
-    width: 320px;
+    margin: 0 auto;
   }
 }
 @media (min-width: 640px) and (max-width: 1023px) {
@@ -279,11 +279,12 @@ h1 {
 .header__container {
   position: relative;
   top: 0;
+  margin: 0 auto;
 }
 @media (min-width: 320px) and (max-width: 639px) {
   .header__container {
-    width: 320px;
     height: 300px;
+    width: 100%;
   }
 }
 
@@ -312,9 +313,8 @@ h1 {
 }
 @media (min-width: 320px) and (max-width: 639px) {
   .header__image {
-    width: 320px;
     height: 300px;
-    object-fit: fill;
+    object-fit: cover;
     background-repeat: no-repeat;
     margin: 0;
     padding: 0;
@@ -322,6 +322,7 @@ h1 {
     z-index: 0;
     order: 2;
     top: 0;
+    width: 100%;
   }
 }
 @media (min-width: 640px) and (max-width: 1023px) {
@@ -762,7 +763,7 @@ h1 {
 
 @media (min-width: 320px) and (max-width: 639px) {
   .actual__info_container {
-    width: 280px;
+    width: 90%;
   }
 }
 @media (min-width: 640px) and (max-width: 1023px) {
@@ -970,9 +971,11 @@ h1 {
   }
 }
 
+.actual__image-position {
+  width: 100%;
+}
 @media (min-width: 320px) and (max-width: 639px) {
   .actual__image-position {
-    width: 320px;
     position: relative;
     left: 0;
     padding: 0;
@@ -982,36 +985,29 @@ h1 {
 }
 @media (min-width: 640px) and (max-width: 1023px) {
   .actual__image-position {
-    width: 640px;
     position: relative;
-    left: -30px;
     padding: 0;
     margin-top: 20px;
   }
 }
 @media (min-width: 1024px) and (max-width: 1279px) {
   .actual__image-position {
-    width: 1024px;
     position: relative;
-    left: -51px;
     padding: 0;
     margin-top: 20px;
+    width: 100vw;
   }
 }
 @media (min-width: 1280px) and (max-width: 1439px) {
   .actual__image-position {
-    width: 1280px;
     position: relative;
-    left: -65px;
     padding: 0;
     margin-top: 20px;
   }
 }
 @media (min-width: 1440px) and (max-width: 1599px) {
   .actual__image-position {
-    width: 1440px;
     position: relative;
-    left: -72px;
     padding: 0;
     margin-top: 20px;
   }
@@ -1020,7 +1016,6 @@ h1 {
   .actual__image-position {
     width: 100vw;
     position: relative;
-    left: -80px;
     padding: 0;
     margin-top: 20px;
   }
@@ -1029,7 +1024,6 @@ h1 {
   .actual__image-position {
     width: 100vw;
     position: relative;
-    left: -95px;
     padding: 0;
     margin-top: 20px;
   }
@@ -1038,7 +1032,6 @@ h1 {
   .actual__image-position {
     width: 100vw;
     position: relative;
-    left: -127px;
     padding: 0;
     margin-top: 20px;
   }
@@ -1497,15 +1490,15 @@ h1 {
 @media (min-width: 320px) and (max-width: 639px) {
   .subscription {
     margin-top: 100px;
-    width: 320px;
     height: 386px;
+    width: 100%;
   }
 }
 @media (min-width: 640px) and (max-width: 1023px) {
   .subscription {
     margin-top: 80px;
-    width: 640px;
     height: 386px;
+    width: 100%;
   }
 }
 @media (min-width: 1024px) and (max-width: 1279px) {
@@ -2530,12 +2523,12 @@ h1 {
 }
 @media (min-width: 320px) and (max-width: 639px) {
   .page {
-    width: 320px;
+    width: 100%;
   }
 }
 @media (min-width: 640px) and (max-width: 1023px) {
   .page {
-    width: 640px;
+    width: 100%;
   }
 }
 @media (min-width: 1024px) and (max-width: 1279px) {
@@ -2578,19 +2571,19 @@ h1 {
 }
 
 body {
-  width: 100vw;
   max-width: 100vw;
   margin: 0 auto;
   background: #eee;
+  width: 100%;
 }
 @media (min-width: 320px) and (max-width: 639px) {
   body {
-    width: 320px;
+    width: 90%;
   }
 }
 @media (min-width: 640px) and (max-width: 1023px) {
   body {
-    width: 640px;
+    width: 100%;
   }
 }
 @media (min-width: 1024px) and (max-width: 1279px) {
@@ -2620,7 +2613,7 @@ body {
 }
 @media (min-width: 2560px) {
   body {
-    width: 2560px;
+    width: 100%;
   }
 }
 
