--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -2,13 +2,13 @@
   background: 50% / cover url(/images/subscription/subscription__background.png);
   @include Mobile {
     margin-top: 100px;
-    width: 320px;
     height: 386px;
+    width: 100%;
   }
   @include SmallPhone {
     margin-top: 80px;
-    width: 640px;
     height: 386px;
+    width: 100%;
   }
 
   @include Tablet {
