--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,10 +13,10 @@
   max-width: 100%;
   margin: 0 auto;
   @include Mobile {
-    width: 320px;
+    width: 100%;
   }
   @include SmallPhone {
-    width: 640px;
+    width: 100%;
   }
   @include Tablet {
     width: 1024px;
@@ -47,15 +47,15 @@
 }
 
 body {
-  width: 100vw;
   max-width: 100vw;
   margin: 0 auto;
   background: $c-gray;
+  width: 100%;
   @include Mobile {
-    width: 320px;
+    width: 90%;
   }
   @include SmallPhone {
-    width: 640px;
+    width: 100%;
   }
   @include Tablet {
     width: 1024px;
@@ -73,6 +73,6 @@ body {
     width: 1920px;
   }
   @include LargeScreens {
-    width: 2560px;
+    width: 100%;
   }
 }
