scroll and text decoration are fixed

--- a/src/styles/actual.scss
+++ b/src/styles/actual.scss
@@ -247,7 +247,7 @@
     position: relative;
     padding: 0;
     margin-top: 20px;
-    width: 100vw;
+    width: 100%;
   }
   @include Notebook {
     position: relative;
@@ -260,19 +260,19 @@
     margin-top: 20px;
   }
   @include TheDesign {
-    width: 100vw;
+    width: 100%;
     position: relative;
     padding: 0;
     margin-top: 20px;
   }
   @include FullHD {
-    width: 100vw;
+    width: 100%;
     position: relative;
     padding: 0;
     margin-top: 20px;
   }
   @include LargeScreens {
-    width: 100vw;
+    width: 100%;
     position: relative;
     padding: 0;
     margin-top: 20px;
