--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -995,7 +995,7 @@ h1 {
     position: relative;
     padding: 0;
     margin-top: 20px;
-    width: 100vw;
+    width: 100%;
   }
 }
 @media (min-width: 1280px) and (max-width: 1439px) {
@@ -1014,7 +1014,7 @@ h1 {
 }
 @media (min-width: 1600px) and (max-width: 1919px) {
   .actual__image-position {
-    width: 100vw;
+    width: 100%;
     position: relative;
     padding: 0;
     margin-top: 20px;
@@ -1022,7 +1022,7 @@ h1 {
 }
 @media (min-width: 1920px) and (max-width: 2559px) {
   .actual__image-position {
-    width: 100vw;
+    width: 100%;
     position: relative;
     padding: 0;
     margin-top: 20px;
@@ -1030,7 +1030,7 @@ h1 {
 }
 @media (min-width: 2560px) {
   .actual__image-position {
-    width: 100vw;
+    width: 100%;
     position: relative;
     padding: 0;
     margin-top: 20px;
@@ -2514,6 +2514,11 @@ h1 {
     grid-column: 5/6;
     margin-top: 85px;
   }
+}
+
+.links {
+  text-decoration: none;
+  color: #0f0e08;
 }
 
 .page {
