--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,9 @@
 @import "utils";
-@import "fonts";
-@import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "./block/grid.scss";
+@import "./block/page.scss";
+@import "./block/body.scss";
+@import "./block/logo.scss";
+@import "./block/title.scss";
+@import "./block/header.scss";
+@import "./block/button.scss";
