menu, actual-events

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,3 +7,9 @@
 @import "./block/title.scss";
 @import "./block/header.scss";
 @import "./block/button.scss";
+@import "./block/menu.scss";
+@import "./block/nav.scss";
+@import "./block/main.scss";
+@import "./block/actual-events.scss";
+@import "./block/show.scss";
+@import "./block/lecture.scss";
