--- a/src/styles/block/button.scss
+++ b/src/styles/block/button.scss
@@ -1,7 +1,7 @@
 .button {
   display: flex;
 
-  border: 1px solid #1a5a4c;
+  border: 1px solid $c-dark-green;
   box-sizing: border-box;
   width: 280px;
   height: 50px;
@@ -34,7 +34,7 @@
     align-items: center;
     width: 50px;
     height: 48px;
-    background-color: #1a5a4c;
+    background-color: $c-dark-green;
 
     color: #d7dde3;
     font-weight: bold;
