--- a/src/styles/block/header.scss
+++ b/src/styles/block/header.scss
@@ -35,7 +35,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     width: 100%;
-    height: 90vw;
+    height: 93vw;
     box-sizing: border-box;
 
     margin-bottom: 12px;
@@ -125,7 +125,7 @@
       display: block;
       width: 70px;
       height: 1px;
-      background-color: #1a5a4c;
+      background-color: $c-dark-green;
       right: 65px;
       top: 7px;
     }
