--- a/src/styles/block/page.scss
+++ b/src/styles/block/page.scss
@@ -1,6 +1,12 @@
 .page {
-  font-family: "Montserrat", sans-serif;
+  font-family: Montserrat, sans-serif;
   font-weight: 700;
   font-size: 48px;
   line-height: 48px;
+
+  scroll-behavior: smooth;
+
+  &__body--with-menu {
+    overflow: hidden;
+  }
 }
