--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,11 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./utils/_reset.scss";
+@import "./utils/_mixins";
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/museum.scss";
+@import "./blocks/current-events.scss";
+@import "./blocks/events.scss";
+@import "./blocks/grid.scss";
