--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,12 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "./reset.scss";
+@import "./normalize.scss";
+
+@import "./mixin";
+
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/container.scss";
+@import "./blocks/logo.scss";
