--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -1,3 +1,30 @@
 .grid {
-  display: grid;
+  @include onDesktop {
+    display: grid;
+    column-gap: 30px;
+    grid-template-columns: repeat(12, 1fr);
+    align-items: center;
+  }
+
+  &--revers {
+    @include onDesktop {
+      display: flex;
+      flex-direction: row-reverse;
+      gap: 120px;
+    }
+  }
+
+  &__item {
+    @for $start from 1 through 12 {
+      @for $end from $start through 12 {
+
+        &--onDesktop-#{$start}-#{$end} {
+          @include onDesktop {
+            grid-column: #{$start} / #{$end + 1};
+          }
+        }
+
+      }
+    }
+  }
 }
