--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,3 +9,4 @@
 @import "./blocks/current-events.scss";
 @import "./blocks/events.scss";
 @import "./blocks/grid.scss";
+@import "./blocks/wraper.scss";
