--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,8 +6,14 @@
 @import "./normalize.scss";
 
 @import "./mixin";
+@import "./variables";
 
 @import "./blocks/page.scss";
 @import "./blocks/header.scss";
+@import "./blocks/top-actions.scss";
+@import "./blocks/icon.scss";
 @import "./blocks/container.scss";
 @import "./blocks/logo.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/events.scss";
+@import "./blocks/event.scss";
