--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,3 +10,4 @@
 @import "./blocks/events.scss";
 @import "./blocks/grid.scss";
 @import "./blocks/wraper.scss";
+@import "./blocks/classicism.scss";
