--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,169 +14,56 @@
 @import "./blocks/left-side-mark.scss";
 @import "./blocks/section.scss";
 @import "./blocks/event.scss";
+@import "./blocks/lecture.scss";
+@import "./blocks/submit.scss";
 
 * {
   box-sizing: border-box;
 }
 
-.lecture {
-  position: relative;
-
-  &__photo {
-    width: 100%;
-    z-index: -1;
-  }
-
-  &__container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  &__info {
-    margin: 0 auto 20px;
-    padding: 0 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    min-width: 280px;
-    max-width: 570px;
-    height: 140px;
-    background-color: #fff;
-    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
-    transform: translateY(-55%);
-
-    @include onTablet {
-      height: 204px;
-      width: 570px;
-      padding: 0 55px;
-    }
-
-    @include onDesktop {
-      padding: 0 100px;
-    }
-
-    &-top {
-      display: flex;
-      justify-content: space-between;
-
-      font-size: 16px;
-
-      @include onTablet {
-        font-size: 14px;
-      }
-    }
-  }
-
-  &__type {
-    font-weight: 500;
-    line-height: 100%;
-    color: #687480;
-  }
-
-  &__time {
-    font-weight: bold;
-    line-height: 150%;
-    color: #1a5a4c;
-  }
-
-  &__name {
-    font-family: "Montserrat", sans-serif;
-    font-size: 28px;
-    line-height: 100%;
-    color: #0f0e08;
-    text-align: center;
-
-    @include onTablet {
-      font-size: 36px;
-      text-align: start;
-    }
-  }
+.page__footer {
+  margin-top: 50px;
 }
 
-.submit {
-  background-image: url(../images/Rectangle22.png);
-  min-height: 320px;
-  background-position: center;
-  background-size: cover;
-  color: #fff;
-
-  display: flex;
-  align-items: center;
-
-  &__title {
-    margin-bottom: 20px;
-
-    font-family: "Montserrat", sans-serif;
-    font-weight: bold;
-    font-size: 36px;
-    line-height: 100%;
-    text-align: center;
+.footer {
+  &__icons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
     @include onTablet {
-      margin-bottom: 16px;
-
-      font-size: 48px;
-      font-weight: 700;
+      flex-direction: column;
+      gap: 62px;
     }
   }
 
-  &__description {
-    display: block;
-    margin-bottom: 50px;
+  &__logos-soc {
+    display: flex;
+    gap: 15px;
+  }
+
+  &__subtitle {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-size: 14px;
+    line-height: 20px;
+    color: #0f0e08;
+  }
+
+  &__content {
+    margin-top: 20px;
 
     font-family: "IBM Plex Sans", sans-serif;
-    font-size: 18px;
+    font-size: 14px;
     line-height: 150%;
-    text-align: center;
+    color: #0f0e08;
 
-    @include onTablet {
-      margin-bottom: 64px;
-
-      line-height: 100%;
+    &--strong {
+      font-weight: 600;
     }
   }
 
-  &__button {
-    @include onTablet {
-      gap: 30px;
-      max-width: 570px;
-    }
-
-    &-field {
-      border: none;
-      padding: 0 20px;
-
-      font-family: "Montserrat", sans-serif;
-      font-weight: 500;
-      font-size: 18px;
-      line-height: 100%;
-      color: #0f0e08;
-      text-transform: none;
-
-      &::placeholder {
-        font-weight: normal;
-        font-size: 14px;
-        color: #687480;
-
-        transition: font-size 0.3s;
-      }
-
-      &:hover::placeholder {
-        font-size: 18px;
-      }
-
-      &:focus {
-        outline: none;
-      }
-    }
-
-    &-icon {
-      background-color: #f14a27;
-      color: #000;
-
-      cursor: pointer;
-    }
+  &__contact {
+    display: block;
+    text-decoration: none;
   }
 }
