--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -1,3 +1,119 @@
 .event {
-  color: blue;
+  box-sizing: border-box;
+  padding: 0 20px;
+  width: 100%;
+
+  margin-bottom: 60px;
+
+  @include onTablet {
+    margin-bottom: 64px;
+  }
+
+  @include onDesktop {
+    margin-bottom: 104px;
+  }
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+
+  &--3 {
+    width: 100%;
+    margin: 0;
+    max-width: 1280px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__photo-container {
+    width: 100%;
+  }
+
+  &__photo {
+    margin-bottom: 20px;
+    box-sizing: border-box;
+    width: 100%;
+
+    &--3 {
+      width: 100%;
+    }
+  }
+
+  &__value {
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__meaning {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 100%;
+    color: #687480;
+  }
+
+  &__date {
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 150%;
+    color: $colorGreen;
+  }
+
+  &__name {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 100%;
+    color: $colorSemi-black;
+
+    &::after {
+      content: "";
+      display: block;
+      margin-left: 10px;
+      width: 10px;
+      height: 10px;
+      background-image: url(../images/befor.svg);
+      background-size: cover;
+
+      @include onTablet {
+        width: 15px;
+        height: 15px;
+      }
+    }
+
+    &:last-child::after {
+      display: none;
+    }
+
+    @include onTablet {
+      font-size: 36px;
+    }
+  }
+
+  &__description {
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 150%;
+    color: #4e4e4e;
+  }
+
+  &__details {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  &__details--3 {
+    box-sizing: border-box;
+    width: 570px;
+    padding: 48px 100px;
+    background-color: #fff;
+    transform: translateY(-100px);
+    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
+  }
 }
