--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -4,6 +4,8 @@
   margin: 0;
   box-sizing: border-box;
 
+  scroll-behavior: smooth;
+
   &__body {
     margin: 0;
     padding: 0;
@@ -33,8 +35,11 @@
 
   &__section-title {
     font-weight: bold;
-    font-size: 48px;
+    font-size: 36px;
     line-height: 100%;
     color: $colorSemi-black;
+    text-align: center;
+    padding: 0 20px;
+    margin: 0 auto 40px;
   }
 }
