--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -45,6 +45,7 @@
   &__subtitle {
     font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
+    font-weight: normal;
     line-height: 20px;
     color: #0f0e08;
   }
@@ -65,5 +66,43 @@
   &__contact {
     display: block;
     text-decoration: none;
+    color: inherit;
+  }
+
+  &__line {
+    height: 1px;
+    background: rgba(26, 90, 76, 0.5);
+
+    @include onDesktop {
+      height: 360px;
+      width: 1px;
+    }
+  }
+
+  &__scroll-up {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-self: end;
+    grid-column: 2 / 3;
+
+    height: 50px;
+    width: 50px;
+    border: 1px solid #1a5a4c;
+    border-radius: 50%;
+
+    @include onTablet {
+      display: none;
+    }
+  }
+}
+
+.link {
+  text-decoration: none;
+  color: #0f0e08;
+  transition: color 0.3s;
+
+  &:hover {
+    color: #f14a27;
   }
 }
