--- a/src/styles/block/main.scss
+++ b/src/styles/block/main.scss
@@ -10,4 +10,24 @@
       margin-bottom: 200px;
     }
   }
+
+  &__gallery {
+    margin-bottom: 100px;
+
+    @include onLaptop {
+      margin-bottom: 92px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 200px;
+    }
+  }
+
+  &__subscribe {
+    margin-bottom: 50px;
+
+    @include onDesktop {
+      margin-bottom: 48px;
+    }
+  }
 }
