--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,3 +13,7 @@
 @import "./block/actual-events.scss";
 @import "./block/show.scss";
 @import "./block/lecture.scss";
+@import "./block/gallery.scss";
+@import "./block/circle-position.scss";
+@import "./block/subscribe.scss";
+@import "./block/contscts.scss";
