--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,4 +16,4 @@
 @import "./block/gallery.scss";
 @import "./block/circle-position.scss";
 @import "./block/subscribe.scss";
-@import "./block/contscts.scss";
+@import "./block/contacts.scss";
