--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,3 +11,4 @@
 @import "./blocks/grid.scss";
 @import "./blocks/wraper.scss";
 @import "./blocks/classicism.scss";
+@import "./blocks/gallery.scss";
