--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -18,7 +18,6 @@
     top: 0;
     left: 0;
     right: 0;
-    max-width: 1920px;
     margin: 0 auto;
 
     transform: translateX(-100%);
@@ -27,5 +26,17 @@
     &:target {
       transform: translateX(0);
     }
+  }
+
+  &__classicism {
+    margin-bottom: 50px;
+
+    @include onDesktop {
+      margin-bottom: 150px;
+    }
+  }
+
+  &__gallery {
+    margin-bottom: 100px;
   }
 }
