--- a/src/styles/block/gallery.scss
+++ b/src/styles/block/gallery.scss
@@ -1,6 +1,7 @@
 .gallery {
   display: flex;
   flex-direction: column;
+  box-sizing: border-box;
 
   padding: 0 0 0 20px;
 
@@ -9,7 +10,7 @@
   }
 
   @include onDesktop {
-    padding: 0 55px;
+    padding: 0;
     justify-content: center;
   }
 
@@ -29,7 +30,7 @@
     }
 
     @include onDesktop {
-      margin-bottom: 56px;
+      margin: 0 0 56px 55px;
     }
   }
 
@@ -47,10 +48,12 @@
     }
 
     @include onDesktop {
+      max-width: 1600px;
       height: 100%;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 30px;
+      align-self: center;
+      gap: 20px;
     }
   }
 
