--- a/src/styles/block/main.scss
+++ b/src/styles/block/main.scss
@@ -19,6 +19,7 @@
     }
 
     @include onDesktop {
+      margin: auto;
       margin-bottom: 200px;
     }
   }
@@ -28,6 +29,18 @@
 
     @include onDesktop {
       margin-bottom: 48px;
+    }
+  }
+
+  &__contacts {
+    margin-bottom: 80px;
+
+    @include onLaptop {
+      margin-bottom: 120px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 88px;
     }
   }
 }
