--- a/src/styles/block/menu.scss
+++ b/src/styles/block/menu.scss
@@ -42,6 +42,10 @@
 
   &__nav {
     grid-column: 1 / 4;
+
+    color: $c-main-black;
+    font-size: 28px;
+    line-height: 40px;
   }
 
   &:target {
