--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,19 +1,22 @@
 @import "utils";
 
-@import "./block/grid.scss";
-@import "./block/page.scss";
-@import "./block/body.scss";
-@import "./block/logo.scss";
-@import "./block/title.scss";
-@import "./block/header.scss";
-@import "./block/button.scss";
-@import "./block/menu.scss";
-@import "./block/nav.scss";
-@import "./block/main.scss";
-@import "./block/actual-events.scss";
-@import "./block/show.scss";
-@import "./block/lecture.scss";
-@import "./block/gallery.scss";
-@import "./block/circle-position.scss";
-@import "./block/subscribe.scss";
-@import "./block/contacts.scss";
+@import "./block/grid";
+@import "./block/link";
+@import "./block/page";
+@import "./block/body";
+@import "./block/logo";
+@import "./block/title";
+@import "./block/header";
+@import "./block/button";
+@import "./block/menu";
+@import "./block/nav";
+@import "./block/main";
+@import "./block/actual-events";
+@import "./block/show";
+@import "./block/lecture";
+@import "./block/gallery";
+@import "./block/circle-position";
+@import "./block/subscribe";
+@import "./block/contacts";
+@import "./block/scroll-up";
+@import "./block/footer";
