--- a/src/styles/block/contacts.scss
+++ b/src/styles/block/contacts.scss
@@ -1,3 +1,169 @@
 .contacts {
-  background-color: rosybrown;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+
+  box-sizing: border-box;
+
+  padding: 0 20px;
+
+  @include onLaptop {
+    grid-template-columns: repeat(6, 1fr);
+    padding: 0 36px;
+    gap: 30px;
+  }
+
+  @include onDesktop {
+    grid-template-columns: repeat(12, 1fr);
+    padding: 0 55px;
+  }
+
+  &__media {
+    grid-column: 1 / 3;
+
+    display: flex;
+    justify-content: space-between;
+
+    margin-bottom: 40px;
+
+    @include onLaptop {
+      grid-column: 1 / 2;
+      flex-direction: column;
+      justify-content: flex-start;
+    }
+  }
+
+  &__logo {
+    height: 72px;
+
+    @include onLaptop {
+      margin-bottom: 62px;
+    }
+  }
+
+  &__facebook {
+    width: 24px;
+    margin-right: 26px;
+
+    @include onLaptop {
+      margin-right: 14px;
+    }
+  }
+
+  &__instagram {
+    width: 24px;
+  }
+
+  &__title {
+    font-family: IBM Plex Sans, sans-serif;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+
+    color: $c-main-black;
+
+    margin-bottom: 20px;
+  }
+
+  &__work-time {
+    grid-column: 1;
+
+    @include onLaptop {
+      grid-column: 2 / 4;
+      margin-bottom: 70px;
+    }
+
+    @include onDesktop {
+      grid-column: 3 / 5;
+      margin-bottom: 0;
+    }
+  }
+
+  &__time {
+    font-family: IBM Plex Sans, sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 24px;
+
+    color: $c-main-black;
+  }
+
+  &__time-bold {
+    font-weight: bold;
+    font-size: 120%;
+  }
+
+  &__contact {
+    grid-column: 2;
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
+    justify-items: flex-start;
+
+    @include onLaptop {
+      grid-column: 4 / 6;
+    }
+
+    @include onDesktop {
+      grid-column: 5 / 7;
+    }
+  }
+
+  &__link {
+    font-family: IBM Plex Sans, sans-serif;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+
+    color: $c-main-black;
+  }
+
+  &__scroll-up {
+    grid-column: 2;
+    justify-self: flex-end;
+
+    margin-bottom: 20px;
+  }
+
+  &__line {
+    grid-column: 1/3;
+    height: 1px;
+    width: 100%;
+    background-color: #1a5a4c80;
+
+    @include onLaptop {
+      grid-column: 2 / -2;
+    }
+
+    @include onDesktop {
+      grid-column: 7 / 8;
+      justify-self: center;
+      width: 1px;
+      height: 100%;
+    }
+  }
+
+  &__nav {
+    grid-column: 1 / 3;
+
+    height: 48px;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+    @include onLaptop {
+
+      grid-column: 2 / 6;
+    }
+
+    @include onDesktop {
+      grid-column: 8 / 12;
+    }
+  }
+
+  &__nav-block {
+    display: flex;
+    flex-direction: column;
+    align-content: space-between;
+  }
 }
