--- a/src/styles/block/nav.scss
+++ b/src/styles/block/nav.scss
@@ -1,16 +1,21 @@
 .nav {
-
   &__list {
+    display: inherit;
+    flex-direction: inherit;
     padding-left: 20px;
   }
 
   &__item {
+    display: inherit;
     margin-bottom: 20px;
   }
 
   &__link {
     text-decoration: none;
-    color: $c-main-black;
-    font-size: 28px;
+
+    color: inherit;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
   }
 }
