--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -32,4 +32,29 @@
     width: 18px;
     height: 12px;
   }
+
+  &__events {
+    position: absolute;
+    bottom: 120px;
+    transform: rotate(-90deg);
+
+    &::before {
+      content: "";
+      position: relative;
+      display: block;
+      width: 70px;
+      height: 1px;
+      background-color: #1a5a4c;
+      transform: translateX(-90px);
+      top: 10px;
+    }
+  }
+
+  &__events-text {
+    color: #687480;
+    font-family: "IBM Plex Sans", sans-serif;
+    font-weight: bold;
+    font-size: 14px;
+    text-decoration: none;
+  }
 }
