--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,4 @@
 @import "./blocks/wraper.scss";
 @import "./blocks/classicism.scss";
 @import "./blocks/gallery.scss";
+@import "./blocks/subscribe.scss";
