landing without checklist

--- a/src/styles/block/header.scss
+++ b/src/styles/block/header.scss
@@ -1,5 +1,6 @@
 .header {
   position: relative;
+  // height: 100vh;
 
   display: flex;
   flex-direction: column;
@@ -18,7 +19,7 @@
     grid-template-columns: repeat(6, 1fr);
 
     padding: 15px 34px 0;
-
+    // background-position: top 0 left calc(50% + 225px);
     background-image: url(../images/Natsionalnij-laptop.png);
   }
 
@@ -28,6 +29,7 @@
 
     padding: 15px 54px 0;
 
+    background-position: top right;
     background-image: url(../images/Natsionalnij-desktop.png);
   }
 
@@ -76,6 +78,8 @@
 
     @include onLaptop {
       grid-column: 1 / 4;
+      justify-self: flex-start;
+
       margin-bottom: 32px;
     }
 
