--- a/src/styles/block/page.scss
+++ b/src/styles/block/page.scss
@@ -6,7 +6,33 @@
 
   scroll-behavior: smooth;
 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  &__menu {
+    position: absolute;
+    top: -130%;
+
+    @include onLaptop {
+      max-width: $width-laptop;
+      left: calc(50vw - (#{$width-laptop} / 2));
+    }
+  }
+
   &__body--with-menu {
     overflow: hidden;
+  }
+
+  &__body {
+    width: 100vw;
+    @include onLaptop {
+      max-width: $width-laptop;
+    }
+
+    @include onDesktop {
+      max-width: $width-desktop;
+    }
   }
 }
