--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -1,19 +1,22 @@
 .event {
   box-sizing: border-box;
-  padding: 0 20px;
   width: 100%;
+  padding: 0 20px;
 
   margin-bottom: 60px;
 
   @include onTablet {
     margin-bottom: 64px;
+    padding: 0 36px;
   }
 
   @include onDesktop {
     margin-bottom: 104px;
+    padding: 0 56px;
   }
 
   &:last-child {
+    padding: 0;
     margin-bottom: 0;
   }
 
@@ -45,6 +48,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    &--3 {
+      margin: 0 20px 20px;
+
+      @include onTablet {
+        margin: 0 0 16px;
+      }
+    }
   }
 
   &__meaning {
@@ -106,14 +117,24 @@
     height: 100%;
     flex-direction: column;
     justify-content: center;
+
+    &--3 {
+      box-sizing: border-box;
+      width: 280px;
+      margin: 0 20px;
+      padding: 20px 0;
+      background-color: #fff;
+      transform: translateY(-100px);
+      box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
+
+      text-align: center;
+
+      @include onTablet {
+        width: 570px;
+        padding: 48px 100px;
+        text-align: start;
+      }
+    }
   }
 
-  &__details--3 {
-    box-sizing: border-box;
-    width: 570px;
-    padding: 48px 100px;
-    background-color: #fff;
-    transform: translateY(-100px);
-    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
-  }
 }
