--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -78,7 +78,7 @@
       right: 0;
       width: 488px;
       height: 408px;
-      transform: translateY(-122px);
+      transform: translate(1px, -122px);
       z-index: -1;
     }
 
@@ -148,6 +148,8 @@
     width: min-content;
     margin: 0 auto;
 
+    text-decoration: none;
+
     @include onTablet {
       margin: 0;
     }
@@ -174,25 +176,6 @@
       height: 70px;
       line-height: 70px;
     }
-  }
-
-  &__tickets-arrow {
-    display: flex;
-    height: 50px;
-    width: 50px;
-
-    background: $colorGreen;
-
-    @include onTablet {
-      height: 70px;
-      width: 70px;
-    }
-  }
-
-  &__tickets-logo {
-    display: block;
-    margin: auto;
-    height: 12px;
   }
 
   &__action {
