--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 
 @import "./blocks/page.scss";
 @import "./blocks/header.scss";
+@import "./blocks/button.scss";
 @import "./blocks/top-actions.scss";
 @import "./blocks/icon.scss";
 @import "./blocks/container.scss";
@@ -18,3 +19,6 @@
 @import "./blocks/events.scss";
 @import "./blocks/event.scss";
 @import "./blocks/grid.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/follow.scss";
+@import "./blocks/footer.scss";
