--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -10,11 +10,14 @@
 
   @include onDesktop {
     grid-template-columns: repeat(12, 1fr);
-    column-gap: 30px;
   }
 
   &--desktop {
     display: block;
+
+    @include onTablet {
+      display: grid;
+    }
 
     @include onDesktop {
       display: grid;
@@ -26,14 +29,8 @@
     @include onTablet {
       @for $start from 1 through 6 {
         @for $end from $start through 6 {
-          &--#{$start}-#{$end} {
+          &--tablet-#{$start}-#{$end} {
             grid-column: #{$start} / #{$end + 1};
-          }
-
-          &--desktop-#{$start}-#{$end} {
-            @include onTablet {
-              grid-column: #{$start} / #{$end + 1};
-            }
           }
         }
       }
@@ -42,25 +39,23 @@
     @include onDesktop {
       @for $start from 1 through 12 {
         @for $end from $start through 12 {
-          &--#{$start}-#{$end} {
-            grid-column: #{$start} / #{$end + 1};
-          }
-
           &--desktop-#{$start}-#{$end} {
-            @include onDesktop {
-              grid-column: #{$start} / #{$end + 1};
-            }
+            grid-column: #{$start} / #{$end + 1};
           }
         }
       }
     }
 
     &--first {
-      order: 1;
+      @include onDesktop {
+        order: 1;
+      }
     }
 
     &--second {
-      order: 2;
+      @include onDesktop {
+        order: 2;
+      }
     }
   }
 }
