--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -39,7 +39,18 @@
     line-height: 100%;
     color: $colorSemi-black;
     text-align: center;
-    padding: 0 20px;
+    padding: 0;
     margin: 0 auto 40px;
+
+    @include onTablet {
+      text-align: start;
+      margin-bottom: 48px;
+      padding: 0 40px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 56px;
+      padding: 0 56px;
+    }
   }
 }
