--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -11,6 +11,11 @@
     width: 100%;
     object-fit: cover;
     margin-bottom: 16px;
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(0.9);
+    }
 
     @include onTablet {
       height: 520px;
