--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -59,6 +59,18 @@
     }
   }
 
+  &__img {
+    @include onDesktop {
+      transition: transform 0.3s;
+    }
+
+    &:hover {
+      @include onDesktop {
+        transform: scale(0.9);
+      }
+    }
+  }
+
   &__toggle {
     display: flex;
     flex-direction: row;
