--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -34,6 +34,12 @@
   }
 
   &__events {
+    display: none;
+
+    @include onDesktop {
+      display: block;
+    }
+
     position: absolute;
     bottom: 120px;
     transform: rotate(-90deg);
