--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,3 +13,4 @@
 @import "./blocks/classicism.scss";
 @import "./blocks/gallery.scss";
 @import "./blocks/subscribe.scss";
+@import "./blocks/contact-us.scss";
