--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -85,13 +85,14 @@
     }
   }
 
-  &__input-arrow {
+  &__button {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 50px;
     height: 50px;
     background-color: #f14f27;
+    border-color: #f14f27;
 
     @include onTablet {
       width: 70px;
