--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -13,10 +13,15 @@
   }
 
   &__time-work {
-    font-weight: bold;
+    font-weight: 600;
   }
 
   &__title {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 140%;
     padding-bottom: 20px;
   }
 
@@ -26,6 +31,8 @@
   }
 
   &__time {
+    font-family: "IBM Plex Sans", sans-serif;
+    line-height: 150%;
     font-size: 14px;
     max-width: 110px;
     margin-bottom: 20px;
@@ -34,10 +41,45 @@
   &__info {
     display: flex;
     justify-content: space-between;
+    color: #0f0e08;
+  }
+
+  &__text {
+    line-height: 150%;
+    padding-bottom: 70px;
   }
 
   &__links {
     font-size: 14px;
     max-width: 120px;
+  }
+
+  &__link {
+    line-height: 150%;
+    text-decoration: none;
+    color: #0f0e08;
+
+    &:hover {
+      color: #64f0f5;
+    }
+  }
+
+  &__nav {
+    display: flex;
+    flex-direction: row;
+    gap: 45px;
+    border-top: 1px solid #1a5a4c80;
+    padding-top: 40px;
+  }
+
+  &__nav-item:first-child {
+    margin-bottom: 20px;
+  }
+
+  &__nav-link {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-size: 14px;
+    text-decoration: none;
+    color: #0f0e08;
   }
 }
