header elements positioning

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@
 @import "./blocks/container.scss";
 @import "./blocks/grid.scss";
 @import "./blocks/button.scss";
+@import "./blocks/link.scss";
 
 @import "./blocks/header.scss";
 @import "./blocks/top-bar.scss";
@@ -16,93 +17,8 @@
 @import "./blocks/event.scss";
 @import "./blocks/lecture.scss";
 @import "./blocks/submit.scss";
+@import "./blocks/footer.scss";
 
 * {
   box-sizing: border-box;
-}
-
-.page__footer {
-  margin-top: 50px;
-}
-
-.footer {
-  &__icons {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    @include onTablet {
-      flex-direction: column;
-      gap: 62px;
-    }
-  }
-
-  &__logos-soc {
-    display: flex;
-    gap: 15px;
-  }
-
-  &__subtitle {
-    font-family: "IBM Plex Sans", sans-serif;
-    font-size: 14px;
-    font-weight: normal;
-    line-height: 20px;
-    color: #0f0e08;
-  }
-
-  &__content {
-    margin-top: 20px;
-
-    font-family: "IBM Plex Sans", sans-serif;
-    font-size: 14px;
-    line-height: 150%;
-    color: #0f0e08;
-
-    &--strong {
-      font-weight: 600;
-    }
-  }
-
-  &__contact {
-    display: block;
-    text-decoration: none;
-    color: inherit;
-  }
-
-  &__line {
-    height: 1px;
-    background: rgba(26, 90, 76, 0.5);
-
-    @include onDesktop {
-      height: 360px;
-      width: 1px;
-    }
-  }
-
-  &__scroll-up {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    justify-self: end;
-    grid-column: 2 / 3;
-
-    height: 50px;
-    width: 50px;
-    border: 1px solid #1a5a4c;
-    border-radius: 50%;
-
-    @include onTablet {
-      display: none;
-    }
-  }
-}
-
-.link {
-  text-decoration: none;
-  color: #0f0e08;
-  transition: color 0.3s;
-
-  &:hover {
-    color: #f14a27;
-  }
 }
