--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,3 +14,4 @@
 @import "./blocks/gallery.scss";
 @import "./blocks/subscribe.scss";
 @import "./blocks/contact-us.scss";
+@import "./blocks/footer.scss";
