--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,7 @@
 @import "./blocks/section.scss";
 @import "./blocks/event.scss";
 @import "./blocks/lecture.scss";
+@import "./blocks/gallery.scss";
 @import "./blocks/submit.scss";
 @import "./blocks/footer.scss";
 
